同步于: 10月2日8时51分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -1,53 +1,53 @@
 #### [法轮功真相](https://github.com/gfw-breaker/truth/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧二十周年报告](https://github.com/gfw-breaker/mh-reports/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp;[明慧期刊](https://github.com/gfw-breaker/mh-qikan) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧海外之窗](https://github.com/gfw-breaker/mh-news/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [神韵特别报道](https://github.com/gfw-breaker/mh-news/blob/master/shenyun.md?t=0)
-#### [ 钓鱼台下处处是敌？习近平十一新文章聚焦斗争(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017965.md)
-#### [ “何大拆”接替刘鹤?习心腹抨击房地产过度开发(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018031.md)
-#### [ 习天安门献花 11月再度出访？他连任将加快一事发生？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658548.md)
+#### [ 章天亮: 习率数百高官天安门献花 释三大信号 二十大名单外泄 七常委换五人？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658812.md)
+#### [ 404热文：弄成这副鸟样才符合权力审美](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541439.md)
+#### [ 重磅民调藏亮点 能要中共命 专家：共产政权垮台有迹可循](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/658770.md)
 #### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
-#### [ 十一招待会 中共政治元老集体隐身惹猜疑(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018039.md)
-#### [ 集体叛国？网宣扬中国人打仗时“愿出钱出力”讨论区酸爆翻车(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018018.md)
-#### [ 北京全封阻进城 中共政治元老诡异隐身](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658686.md)
-#### [ 习江斗 二十大政法委书记人选引关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836416.md)
-#### [ 习率常委献花封路关地铁 20大维稳持续扰民](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836130.md)
-#### [ 中国新闻快报：习一行不戴口罩被批双标](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541121.md)
-#### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
-#### [ 【新闻看点】习近平强调“斗争”军方两大诡异](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836385.md)
-#### [ 二十大习派系能否接管“刀把子”引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018041.md)
-#### [ 孙力军判死缓后 前政法委书记孟建柱首露面](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836573.md)
-#### [ 【中国观察】二十大前的红二代裂痕](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836118.md)
-#### [ 元老集团谋政变 习大动作剑指“老老虎”？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541123.md)
-#### [ 中共二十大前东西两战区换将 人事诡秘引猜测](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836700.md)
-#### [ 四省部级“老虎”同日被双开 有人搞假结婚掩盖裸官(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017939.md)
-#### [ 传河南许昌电气学院“为民主为自由为解封”“起义”遭告密夭折(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018046.md)
-#### [ 张一鸣润到新加坡 字节将跳向何方？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658554.md)
+#### [ 大陆餐馆老板对警察怒吼“你们都魔症了中邪了”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018087.md)
+#### [ 六旬老妇一句公道话引发命案 警方公然袒护作恶者助纣为虐(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017919.md)
+#### [ 娱乐圈新规陆剧不能用整容脸？杨颖王一博等顶流恐中枪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658809.md)
+#### [ 原公安大学教师揭中共警界黑幕：警察越贪越被信任](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658773.md)
+#### [ 海南省财政吃紧 政府开始瞄准这些人](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658614.md)
 #### [ 二十大后中国走向已有端倪 两个字就能概括](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658485.md)
-#### [ 【名家专栏】20大前习近平为何加大反腐力度](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836224.md)
-#### [ 头一遭！习率常委天安门广场操练 未戴口罩开启新常态？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658470.md)
-#### [ 二十大前中共军方高层异动 东部战区司令换人](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541279.md)
-#### [ 习近平露面破“被软禁”传闻 分析：因打击习权威(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017795.md)
-#### [ 中共“8个常委”两次现身 北京四门封堵 阻进城](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103540802.md)
-#### [ 习近平露面喊五个“自信”世行：中国经济创历史新低(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017767.md)
-#### [ 严重缺钱？海南盯上“双高”群体 随机抽取50户(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018005.md)
-#### [ 共军对台飞弹军演主角调升 中共二十大谁入常 这样看见端倪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658782.md)
-#### [ 孟建柱亮相“十一”招待会 其大秘孙力军刚判死缓](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541201.md)
-#### [ 秦光荣忏悔书曝光 曾为脱罪给领导写信求情](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836690.md)
-#### [ 中共20大前提“历史自信” 专家：维持谎言(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017821.md)
+#### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
+#### [ 路透：北京下令银行抛售美元以阻人民币续贬](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541447.md)
+#### [ 【百年真相】毁传统断根本 文革“挖祖坟”运动](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog1695/a103474485.md)
+#### [ 十一招待会 中共政治元老集体隐身惹猜疑(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018039.md)
+#### [ 【快讯】新唐人声乐大赛复赛 11人进决赛](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13836941.md)
+#### [ 反对一带一路 意大利新政府拟对中共强硬](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13836853.md)
+#### [ 习天安门献花 11月再度出访？他连任将加快一事发生？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658548.md)
+#### [ 大阵仗！习近平3天打9“虎” 目标瞄准慕后“老老虎”？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658299.md)
+#### [ 陈光诚：正邪不两立水火不相容 警惕中共借美国价值搅混水(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p9/1018013.md)
+#### [ 欧洲新格局：意大利建立竞争优势 德国濒临衰退(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p9/1017947.md)
+#### [ 楼市再度下调首房利率 有用吗？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p5/1018022.md)
+#### [ 中共二十大前东西两战区换将 人事诡秘引猜测](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836700.md)
+#### [ 乌军包围乌东要塞 俄军撤离恐失后勤枢纽](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13836820.md)
+#### [ 河南学潮领袖传被扣留 官方说有“境外反动势力”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/658695.md)
+#### [ 二十大后中国走向已有端倪 两个字就能概括](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/658485.md)
+#### [ 山东极端防疫：二人感染 千人被管控百万人测核酸](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541601.md)
+#### [ 中共罪行录之八十四：政治保卫局与万人坑](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog1695/a103494984.md)
+#### [ 江青“绝命书”：未除邓小平祸国殃民 后患无穷](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog1695/a103454517.md)
+#### [ 谁炸了北溪?普京：国际恐怖主义行为(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p9/1017910.md)
+#### [ “何大拆”接替刘鹤?习心腹抨击房地产过度开发(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018031.md)
+#### [ 中共创逾120个防疫口号 “造词运动”引发民间混乱不满(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018084.md)
+#### [ 集体叛国？网宣扬中国人打仗时“愿出钱出力”讨论区酸爆翻车(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018018.md)
+#### [ 反对一带一路 意大利新政府拟对中共强硬](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc418/n13836853.md)
+#### [ 组图：中共极端防疫 “不得外锁门”说辞遭讽](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836847.md)
+#### [ 搭上20年青春和金钱 台商廖金章终于认清了中共](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658641.md)
+#### [ 孙力军免死另有玄机？习近平真正目的是这个](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656667.md)
+#### [ 48小时内出现多个不寻常 中南海有变故？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656640.md)
+#### [ 【新闻周刊】没疫情也封城 专家指二十大前封控将更极端](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541704.md)
+#### [ 国殇日艺人紧跟风急表忠 爱党者最易被“牺牲”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541649.md)
+#### [ 【中国一分钟】中共二十大前东西两战区换将 人事诡秘引猜测](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541645.md)
 #### [ 【热门话题】习大动作剑指“老老虎”？/孟建柱现身“十一”招待会](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541354.md)
-#### [ 前中共江苏省委副书记张敬华被起诉(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017861.md)
-#### [ 河南学潮领袖传被扣留 官方说有“境外反动势力”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658695.md)
-#### [ 专家：二十大前中共清零政策会更极端](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103540789.md)
-#### [ 北京不断推政策 经济前景会好吗？专家：中国危机重重](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658611.md)
-#### [ 【中国观察】中共极端防疫还能走多远？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13835529.md)
-#### [ 两会中共总理李克强“告别秀”？二十大人事隐藏危机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999667.md)
-#### [ 【秦鹏直播】普京正式吞乌东 小李子“辱华”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836434.md)
-#### [ 陆博主曝光食品“黑科技”、主动销号的背后](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13836018.md)
-#### [ 中国“边角料”食物销量火爆 “黑料”背后藏心酸(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017998.md)
-#### [ 习近平计划11月再出访 外交部“战狼”风格不变？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658623.md)
-#### [ 帝尧时代修出人身的张果老 来做治水的工程指挥 怎么回事？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh4/392599.md)
-#### [ 原公安大学教师揭警界内幕：越贪领导越信任](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836547.md)
-#### [ 让人代做核酸 传上海申万研究所副所长夫妇被查](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836745.md)
-#### [ 中共威胁“久赌必输”才两天 人民币续跌](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836354.md)
-#### [ 二十大前 国进民退加剧 中国经济新预警信号出现](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658602.md)
-#### [ 吉林大学研究生不想造假选择自杀 留书控诉导师](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103540878.md)
-#### [ 20大前风声鹤唳？银行被曝禁发表敏感报告](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836336.md)
-#### [ 习近平露面破谣言 高官随同独缺王岐山(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017723.md)
-#### [ 魏京生：不能对中共的统战掉以轻心](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836743.md)
+#### [ 二十大前中共军方高层异动 东部战区司令换人](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541279.md)
+#### [ 袁斌：我们从小到大学到的历史哪些是假的（5）](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog1699/a103208139.md)
+#### [ 【禁闻】抗战胜利76周年 学者还原历史真相](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog1699/a103191751.md)
+#### [ 中共罪行录之三十六：西藏的文革惨剧 　](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog1699/a103167946.md)
+#### [ 北溪管爆罗生门&nbsp;25万吨甲烷外泄 俄欧死棋?(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p9/1018063.md)
+#### [ 英国女王死亡证明公布 确切死因曝光(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p9/1017963.md)
+#### [ 俄罗斯“壮丁”10万逃到哈萨克斯坦 每天7-8千进入芬兰(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p9/1017930.md)
+#### [ 分析：俄罗斯北溪天然气管道遭破坏 仅有一国获益最大(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p9/1017889.md)
+#### [ 涉惊天大案？江青竟被两封匿名信吓昏了(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p6/998643.md)
+#### [ 与薄一波联手逼退乔石 江泽民最终自尝苦果(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p6/1017865.md)
+#### [ 江泽民窜升背后涉4个中共大佬(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p6/1017520.md)
