--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -1,42 +1,44 @@
 #### [法轮功真相](https://github.com/gfw-breaker/truth/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧二十周年报告](https://github.com/gfw-breaker/mh-reports/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp;[明慧期刊](https://github.com/gfw-breaker/mh-qikan) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧海外之窗](https://github.com/gfw-breaker/mh-news/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [神韵特别报道](https://github.com/gfw-breaker/mh-news/blob/master/shenyun.md?t=0)
 #### [ 章天亮: 习率数百高官天安门献花 释三大信号 二十大名单外泄 七常委换五人？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658812.md)
 #### [ 404热文：弄成这副鸟样才符合权力审美](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541439.md)
-#### [ 重磅民调藏亮点 能要中共命 专家：共产政权垮台有迹可循](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/658770.md)
-#### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
 #### [ 大陆餐馆老板对警察怒吼“你们都魔症了中邪了”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018087.md)
+#### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
+#### [ 十一招待会 中共政治元老集体隐身惹猜疑(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018039.md)
 #### [ 六旬老妇一句公道话引发命案 警方公然袒护作恶者助纣为虐(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017919.md)
+#### [ 重磅民调藏亮点 能要中共命 专家：共产政权垮台有迹可循](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/658770.md)
 #### [ 娱乐圈新规陆剧不能用整容脸？杨颖王一博等顶流恐中枪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658809.md)
 #### [ 原公安大学教师揭中共警界黑幕：警察越贪越被信任](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658773.md)
 #### [ 海南省财政吃紧 政府开始瞄准这些人](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658614.md)
-#### [ 二十大后中国走向已有端倪 两个字就能概括](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658485.md)
 #### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
+#### [ 二十大后中国走向已有端倪 两个字就能概括](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658485.md)
 #### [ 路透：北京下令银行抛售美元以阻人民币续贬](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541447.md)
 #### [ 【百年真相】毁传统断根本 文革“挖祖坟”运动](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog1695/a103474485.md)
-#### [ 十一招待会 中共政治元老集体隐身惹猜疑(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018039.md)
+#### [ 中共创逾120个防疫口号 “造词运动”引发民间混乱不满(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018084.md)
+#### [ 集体叛国？网宣扬中国人打仗时“愿出钱出力”讨论区酸爆翻车(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018018.md)
+#### [ 组图：中共极端防疫 “不得外锁门”说辞遭讽](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836847.md)
+#### [ 王友群：江泽民23年前的狂言已被击碎](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836529.md)
 #### [ 【快讯】新唐人声乐大赛复赛 11人进决赛](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13836941.md)
 #### [ 反对一带一路 意大利新政府拟对中共强硬](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13836853.md)
 #### [ 习天安门献花 11月再度出访？他连任将加快一事发生？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658548.md)
 #### [ 大阵仗！习近平3天打9“虎” 目标瞄准慕后“老老虎”？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658299.md)
+#### [ 山东极端防疫：二人感染 千人被管控百万人测核酸](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541601.md)
 #### [ 陈光诚：正邪不两立水火不相容 警惕中共借美国价值搅混水(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p9/1018013.md)
 #### [ 欧洲新格局：意大利建立竞争优势 德国濒临衰退(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p9/1017947.md)
 #### [ 楼市再度下调首房利率 有用吗？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p5/1018022.md)
+#### [ “何大拆”接替刘鹤?习心腹抨击房地产过度开发(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018031.md)
 #### [ 中共二十大前东西两战区换将 人事诡秘引猜测](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836700.md)
 #### [ 乌军包围乌东要塞 俄军撤离恐失后勤枢纽](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13836820.md)
 #### [ 河南学潮领袖传被扣留 官方说有“境外反动势力”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/658695.md)
 #### [ 二十大后中国走向已有端倪 两个字就能概括](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/658485.md)
-#### [ 山东极端防疫：二人感染 千人被管控百万人测核酸](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541601.md)
+#### [ 【新闻周刊】没疫情也封城 专家指二十大前封控将更极端](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541704.md)
 #### [ 中共罪行录之八十四：政治保卫局与万人坑](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog1695/a103494984.md)
 #### [ 江青“绝命书”：未除邓小平祸国殃民 后患无穷](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog1695/a103454517.md)
 #### [ 谁炸了北溪?普京：国际恐怖主义行为(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p9/1017910.md)
-#### [ “何大拆”接替刘鹤?习心腹抨击房地产过度开发(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018031.md)
-#### [ 中共创逾120个防疫口号 “造词运动”引发民间混乱不满(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018084.md)
-#### [ 集体叛国？网宣扬中国人打仗时“愿出钱出力”讨论区酸爆翻车(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018018.md)
+#### [ 二十大习派系能否接管“刀把子”引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018041.md)
 #### [ 反对一带一路 意大利新政府拟对中共强硬](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc418/n13836853.md)
-#### [ 组图：中共极端防疫 “不得外锁门”说辞遭讽](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836847.md)
 #### [ 搭上20年青春和金钱 台商廖金章终于认清了中共](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658641.md)
 #### [ 孙力军免死另有玄机？习近平真正目的是这个](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656667.md)
 #### [ 48小时内出现多个不寻常 中南海有变故？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656640.md)
-#### [ 【新闻周刊】没疫情也封城 专家指二十大前封控将更极端](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541704.md)
 #### [ 国殇日艺人紧跟风急表忠 爱党者最易被“牺牲”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541649.md)
 #### [ 【中国一分钟】中共二十大前东西两战区换将 人事诡秘引猜测](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541645.md)
 #### [ 【热门话题】习大动作剑指“老老虎”？/孟建柱现身“十一”招待会](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541354.md)
@@ -49,5 +51,3 @@
 #### [ 俄罗斯“壮丁”10万逃到哈萨克斯坦 每天7-8千进入芬兰(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p9/1017930.md)
 #### [ 分析：俄罗斯北溪天然气管道遭破坏 仅有一国获益最大(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p9/1017889.md)
 #### [ 涉惊天大案？江青竟被两封匿名信吓昏了(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p6/998643.md)
-#### [ 与薄一波联手逼退乔石 江泽民最终自尝苦果(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p6/1017865.md)
-#### [ 江泽民窜升背后涉4个中共大佬(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p6/1017520.md)
