--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -23,8 +23,8 @@
 #### [ 薄熙来余党？孙力军团伙？重庆公安高官姚昌序被处理(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018118.md)
 #### [ 中国A股总市值10个月内蒸发逾14万亿元](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836954.md)
 #### [ 传河南许昌电气学院“为民主为自由为解封”“起义”遭告密夭折(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018046.md)
-#### [ 知情人士：北京要求跨国银行 二十大前莫谈政治](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541839.md)
 #### [ 刘锐绍分析李克强交棒下任 功成身退？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658938.md)
+#### [ 知情人士：北京要求跨国银行 二十大前莫谈政治](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541839.md)
 #### [ 习近平不放心？二十大前东西战区换将](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658899.md)
 #### [ “十一”陕西高速客车侧翻 已致8死21伤](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13837122.md)
 #### [ 王友群：江泽民23年前的狂言已被击碎](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836529.md)
@@ -48,6 +48,6 @@
 #### [ 【时事金扫描】俄吞并乌四区 马斯克叫板普京](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc418/n13836782.md)
 #### [ 国殇日艺人紧跟风急表忠 爱党者最易被“牺牲”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541649.md)
 #### [ 【名家专栏】美媒为啥要刊登中共宣传文章？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836801.md)
+#### [ 北京全封阻进城 中共政治元老诡异隐身](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658686.md)
 #### [ 好莱坞影星莱昂纳多辱华？批中共深海捕捞引关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541836.md)
 #### [ 路透：北京下令银行抛售美元以阻人民币续贬](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103541447.md)
-#### [ 组图：中共极端防疫 “不得外锁门”说辞遭讽](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836847.md)
